Popups sometimes don't show scrollbars #613 + Fixed statistics components overflowing each other

--- a/sormas-ui/src/main/webapp/VAADIN/themes/sormas/components/label.scss
+++ b/sormas-ui/src/main/webapp/VAADIN/themes/sormas/components/label.scss
@@ -76,7 +76,7 @@
 
 	// Font sizes
 	&.v-label-small {
-    	font-size: 0.8em;
+    	font-size: 0.75em;
 	}
 
 	&.v-label-medium {
